@@ -73,6 +73,8 @@ require 'lobbyist/workflow_system'
 require 'lobbyist/v2/base'
 require 'lobbyist/v2/account_level'
 require 'lobbyist/v2/activity_summary'
+require 'lobbyist/v2/algorithm_test_run_contact'
+require 'lobbyist/v2/algorithm_test_run'
 require 'lobbyist/v2/appointment'
 require 'lobbyist/v2/authorization'
 require 'lobbyist/v2/campaign_iteration'
