@@ -1,3 +1,4 @@
+* Added AlgorithmTestRun and AlgorithmTestRunContact proxy models.
 * Added temp_s3_url attribute for FrontTemplate objects.
 * Added FrontTemplate proxy model.
 * Added CommunicationCampaign create method.
